--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,8 @@ flutter:
   fonts:
     - family: Open Sans 
       fonts:
-        - asset: fonts/OpenSans-Regular.ttf
-        - asset: fonts/OpenSans-Italic.ttf
+        - asset: fonts/OpenSans/OpenSans-Regular.ttf
+        - asset: fonts/OpenSans/OpenSans-Italic.ttf
           style: italic
-        - asset: fonts/OpenSans-Bold.ttf
+        - asset: fonts/OpenSans/OpenSans-Bold.ttf
           weight: 700
