--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.6
   http: ^1.2.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
