--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   http: ^1.2.2
   font_awesome_flutter: ^10.7.0
+  image_picker: ^1.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
