--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.2
   uuid: ^4.5.1
+  emoji_picker_flutter: ^3.1.0
 
 dev_dependencies:
   flutter_test:
