--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   equatable: ^2.0.5
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.1.0
   http: ^1.2.2
   font_awesome_flutter: ^10.7.0
   image_picker: ^1.1.2
   uuid: ^4.5.1
-  emoji_picker_flutter: ^3.1.0
+  emoji_picker_flutter: ^4.3.0
   collection: ^1.18.0
-  intl: ^0.19.0
+  intl: ^0.20.2
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
